<resources>
    <string name="app_name">MechMate</string>
    <string name="mech_mate">MECH MATE</string>
    <string name="app_description">App that calls the nearest mechanic at your place to save our ship (SOS).</string>
    <string name="mobno">Enter Mobile Number with proper country code</string>
    <string name="otp">We will send you a OTP(one time password) on this given number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_918888888888">+918888888888</string>
    <string name="get_otp">GET OTP</string>
    <string name="enterotp">Enter the OTP that sent to you</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="submit">SUBMIT</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mechanic_registration">Mechanic Registration</string>
    <string name="find_a_mechanic">Find a Mechanic</string>
    <string name="wheels_nstarting_from_n800rs">Wheels\nstarting from\n800rs</string>
    <string name="toolkits_nstarting_from_n400rs">toolkits\nstarting from\n400rs</string>
    <string name="car_seats_nstarting_from_n4000rs">Car seats\nstarting from\n4000rs</string>
    <string name="helmets_nstarting_from_n1200rs">Helmets\nstarting from\n1200rs</string>
    <string name="title_activity_user_map">userMapActivity</string>
    <string name="maps_api_key">AIzaSyB2kIujbZxQomcxszt4wJbFN0LgBU0WVug</string>
    <string name="maps_api_key_new">AIzaSyBcws-v9cR5s8nda_wYIi5prlw09iS0L4k</string>
</resources>