<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otp1"
    tools:context=".OTP1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/otp_verification"
        android:textColor="@color/myblack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center_horizontal"
        android:text="@string/otp"
        android:textAlignment="center"
        android:textColor="@color/faintblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="247dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/textbox"

        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:hint="@string/_918888888888"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/faintblack"
        android:textColorHint="@color/faintblack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="341dp"
        android:layout_height="51dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/mobno"
        android:textColor="@color/faintblack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/getotp"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/get_otp"
        android:textColor="@color/mygreen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneno" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getotp" />


</androidx.constraintlayout.widget.ConstraintLayout>