<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otp2"
    tools:context=".OTP2">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/otp_verification"
        android:textColor="@color/myblack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/enterotp"
        android:textColor="@color/faintblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/mobNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_one"
        android:textColor="@color/faintblack"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobNum">

        <EditText
            android:id="@+id/inputotp1"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />

        <EditText
            android:id="@+id/inputotp2"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />

        <EditText
            android:id="@+id/inputotp3"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />

        <EditText
            android:id="@+id/inputotp4"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />

        <EditText
            android:id="@+id/inputotp5"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />

        <EditText
            android:id="@+id/inputotp6"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/textbox"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/faintblack"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="labelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fredoka_one"
            android:gravity="end"
            android:text="@string/didn_t_receive_otp"
            android:textColor="@color/faintblack" />

        <TextView
            android:id="@+id/resendotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/resend_otp"
            android:textColor="@color/faintblack"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/submit"
        android:textColor="@color/mygreen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />
</androidx.constraintlayout.widget.ConstraintLayout>