<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BuyAccessories">

    <ImageView
        android:id="@+id/backacces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/back"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/fredoka_one"
        android:text="Accessories"
        android:textColor="@color/mygreen"
        android:textSize="28sp"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="601dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="14dp"

        android:background="@drawable/search">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:layout_marginBottom="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/mirimg"
                        android:layout_width="17dp"
                        android:layout_height="65dp"
                        android:layout_weight="0.5"
                        app:srcCompat="@drawable/mirror"
                        android:layout_marginTop="15dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/mirtxt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:paddingLeft="20dp"
                        android:textColor="@color/faintblack"
                        android:text="Mirror\nStarting from\n250rs"
                        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/accs">

                    <ImageView
                        android:id="@+id/hornimg"
                        android:layout_width="17dp"
                        android:layout_height="65dp"
                        android:layout_weight="0.3"
                        app:srcCompat="@drawable/horn"
                        android:layout_marginTop="22dp"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="TODO"
                        tools:ignore="ContentDescription,HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/horntxt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:paddingLeft="20dp"
                        android:textColor="@color/faintblack"
                        android:text="Horn\nStarting from\n400rs"
                        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/tirimg"
                        android:layout_width="17dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="18dp"
                        android:layout_weight="0.5"
                        app:srcCompat="@drawable/tire"
                        tools:ignore="ContentDescription,ImageContrastCheck" />

                    <TextView
                        android:id="@+id/tirtxt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:paddingLeft="20dp"
                        android:textColor="@color/faintblack"
                        android:text="Tires\nStarting from\n1200rs"
                        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"

                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/wlimg"
                        android:layout_width="17dp"
                        android:layout_marginTop="22dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.4"
                        app:srcCompat="@drawable/wheel"
                        android:layout_marginStart="10dp"
                         />

                    <TextView
                        android:id="@+id/wltxt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:textColor="@color/faintblack"
                        android:paddingLeft="30dp"
                        android:text="@string/wheels_nstarting_from_n800rs"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/tulimg"
                        android:layout_width="5dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.2"
                        app:srcCompat="@drawable/hatyar"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="22dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tultxt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:fontFamily="@font/fredoka_one"
                        android:textColor="@color/faintblack"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:paddingStart="30dp"
                        android:text="@string/toolkits_nstarting_from_n400rs"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"

                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/wl2img"
                        android:layout_width="17dp"
                        android:layout_marginTop="22dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.4"
                        app:srcCompat="@drawable/carseat"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:id="@+id/wl2txt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:textColor="@color/faintblack"
                        android:paddingStart="30dp"
                        android:text="@string/car_seats_nstarting_from_n4000rs"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"

                    android:background="@drawable/accs">


                    <ImageView
                        android:id="@+id/wl3img"
                        android:layout_width="17dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="22dp"
                        android:layout_weight="0.4"

                        app:srcCompat="@drawable/helmet"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/wl3txt"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start|center_horizontal|fill_vertical"
                        android:paddingStart="30dp"
                        android:text="@string/helmets_nstarting_from_n1200rs"
                        android:textColor="@color/faintblack"
                        tools:ignore="RtlSymmetry,TextSizeCheck" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/accsearch"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textView12"
            android:layout_width="291dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.7"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center_vertical"
            android:hint="search"
            android:paddingLeft="20dp"
            android:textColor="@color/faintblack"
            android:textColorHint="@color/faintblack"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextFields,VisualLintTextFieldSize"

            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.3"
            app:srcCompat="@drawable/mglass"
            tools:ignore="ContentDescription,RtlHardcoded,ImageContrastCheck" />
    </LinearLayout>


</RelativeLayout>